- ~dslide-kmacro-transcribe-type~ defaults to =:keys= and can be set to =:events= if you encounter an issue (*which you should file*) with =:keys=.
** Changed 🧑‍🔧
- ~dslide-action-kmacro~ old =:keys= has been renamed to =:events=.  It is a vector of non-human-readable events.
- ~dslide-hide-todo~ and ~dslide-hide-tags~ now properly default to =t=, as advertised.  Thanks Ihor ⛄
** Fixed 💩
- Develop window configuration was not cleaned up, resulting in improper window configuration "restoration"
- Line prefixes, such as those used by org modern to draw pretty source blocks, will be hidden by the markup hiding overlays.
- Header graphical artifacts possibly fixed, but the solution uses ~:extend t~ and could lead to problems elsewhere.  File issues!
- Actions for a heading with an empty section (no section element) no longer map over the first child's section
- Fixed keyboard macro backward steps
- Fixed logic in ~dslide-deck-forward~ that could result in no-op do to missing else clause
- Fixed kmacro progress predicates when both forward and backward elements are present
* v0.6.0 Fighting Spam 💌
- There is less markup (especially for babel)
- Old actions are easier to use
- New actions (*KMACROS!*) fit a more clear pattern
- That pattern has a long-term plan
** Why Some Changes are Breaking 🤠
This release captures a lot of the low-hanging fruit of the benefits expected in 0.7.0.  For the most part, what was removed was markup that nobody wanted to write.

0.7.0 will continue in this direction, using less markup and having more of it be similar.  0.7.0 will also make it possible to mix steps from different actions.  That will very nearly bring us to 1.0.

There is a tricky outstanding architectural issue with actions tracking their own progress.  If the changes to custom actions are significant, it will only because it also makes writing new custom actions much, much simpler.
** More Changes Coming 🧑‍🔧